# live-paper-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  justfile
.github/workflows/: ci.yml
.zed/: tasks.json
src/: app.rs  config.rs  egl.rs  main.rs  player.rs  render.rs
