[package]
name = "live-paper"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT"

[dependencies]
glow = "0.18.0"
khronos-egl = { version = "6.0.0", features = ["static"] }
libmpv2 = "6.0.0"
smithay-client-toolkit = "0.20.0" # TODO: migrate to 21 later
wayland-egl = "0.32.11"
wayland-protocols = { version = "0.32.13", features = ["client", "staging"] }

serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
